--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "speak-tts": "2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
