--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Relative calculator",
-  "name": "Chinese Relative Title Calculator",
+  "name": "Asian Relative Title Calculator",
   "icons": [
     {
       "src": "favicon.png",
